--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 </head>
 <body bgcolor="pink">
 	<h1 style=Color:yellow;>Hello gitHub I'm new user in this platform</h1>
+	<p>L'informatique notre passion</p>
 </body>
 </html>
