--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <body bgcolor="pink">
 	<h1 style=Color:yellow;>Hello gitHub I'm new user in this platform</h1>
 	<p>L'informatique notre passion</p>
+	<img src="C:/Users/Js/Desktop/McGraw/boy.jpg">
 </body>
 </html>
