index.html ayant les lire vie de boy et une si longue lettre

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 	<h1 style=Color:yellow;>Hello gitHub I'm new user in this platform</h1>
 	<p>L'informatique notre passion</p>
 	<img src="C:/Users/Js/Desktop/McGraw/boy.jpg">
+	<img src="C:/Users/Js/Desktop/McGraw/mariama.jpg">
 </body>
 </html>
