Index.html avec Header

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>gitProject</title>
 </head>
 <body bgcolor="pink">
+	<header>Welcome tTo our Services !</header>
 	<h1 style=Color:yellow;>Hello gitHub I'm new user in this platform</h1>
 	<p>L'informatique notre passion</p>
 	<img src="C:/Users/Js/Desktop/McGraw/boy.jpg">
